--- a/créationVM.html
+++ b/créationVM.html
@@ -33,72 +33,67 @@
     <main>
         <section class="image">
 
-            <h2> Etape de la création de la Machine Virtuelle</h2>
+            <h2> <b>Etape de la création d'une Machine Virtuelle</b></h2>
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm1.png">
-                <p> Fournir des espaces de travail sécurisés et cryptés. VirtualBox sécurise les connexions à distance aux applications
-                    restreintes grâce à des clés de chiffrement de 256 bits, et garantit que les utilisateurs ne peuvent pas télécharger
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Cliquer sur l'îcone "Nouvelle". </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm2.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Choix du nom et du type. Pour nous, cela sera Linux. </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm3.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Configuration de la taille de la RAM que l'on veut alloué à la machine virtuelle ( on le laisse par défaut ). </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm4.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Choix de possibilité de créer un disque dur <i>( exemple : si on veut stocker des fichiers )</i>. </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm5.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Récapitulatif des propriétés de notre machine. </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm6.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> La machine est éteinte, il n'est pas encore possible de l'exécuter.
+                Pour se faire, il faut installer un système d'exploitation.</p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm7.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Avant cela, on appuie sur "configuration" et dans l'adaptateur1,
+                on change le mode d'accès réseau avec l' "Accès par pont". <br>
+                Elle permet d'avoir la même carte réseau que celle de notre PC et de
+                reprendre tous ces paramètres. <br>
+                Ainsi, on aura déjà accès à internet sur la machine virtuelle.</p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm8.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Démarrage de la machine virtuelle. </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm9.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Sélection d'un disque de démarrage. <br>
+                Il faut installer un ISO linux ( dans notre cas ) en allant sur le site
+                : <br> </br>https://lecrabeinfo.net/telecharger-les-iso-de-linux-mint-21.html </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm10.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Sélection du fichier précédemment installé. </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-creationVM/vm11.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> La marchine virtuelle s'allume !  </p>
             </article>
 
 
