--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
 
   <main>
     <section class="image">
-      <h2 > La Virtualisation </h2>
+      <h2 > <strong> La Virtualisation </strong> </h2>
       <article class="oracle">
-        <p> La virtualisation est une technologie que vous pouvez utiliser pour créer des représentations virtuelles de serveurs, <br>
-          de stockage, de réseaux et d'autres machines physiques. <br> Le logiciel virtuel imite les fonctions du matériel physique
-          pour exécuter plusieurs machines virtuelles sur une seule <br> machine physique. Les entreprises ont recours à la virtualisation
-          pour utiliser efficacement leurs ressources <br> matérielles et obtenir un meilleur rendement de leurs investissements.<br>
+        <p> La virtualisation est une technologie que vous pouvez utiliser pour <strong>créer des représentations virtuelles de serveurs, <br>
+          de stockage, de réseaux et d'autres machines physiques.</strong> <br> Le logiciel virtuel <strong>imite les fonctions du matériel physique</strong>
+          pour exécuter plusieurs machines virtuelles sur une seule <br> machine physique. <br>
+          Les entreprises ont recours à la virtualisation pour utiliser efficacement leurs ressources matérielles et obtenir <br>
+          un meilleur rendement de leurs investissements.<br>
           Elle alimente également les services de cloud computing qui aident les organisations à gérer leur infrastructure plus
           efficacement. </p>
         <img src="assets/img/img-acceuil/virtualisation2.jpg">
@@ -99,42 +100,49 @@
 
 
 
-      <h2> Différence entre émulateur, simulateur et outil de virtualisation </h2>
+      <h2> <strong> émulateur, simulateur et outil de virtualisation </strong> </h2>
       <article class="etapes">
         <img src="assets/img/img-acceuil/emulateur.webp">
-        <p> Définition : Un émulateur reproduit fidèlement le comportement et les fonctionnalités d'un système ou d'un matériel
-          sur une autre plateforme.
-          Objectif : Permet d'exécuter des logiciels ou des systèmes conçus pour une architecture différente sur une autre machine.
-          Caractéristiques :
-          Reproduit le matériel (processeur, carte graphique, mémoire, etc.) au niveau bas.
+        <p> <strong>EMULATEUR</strong><br><br>
+          <strong>Définition :</strong><br> Un émulateur reproduit fidèlement le comportement et les fonctionnalités d'un système ou d'un matériel<br>
+          sur une autre plateforme.<br><br>
+          <strong>Objectif :</strong><br> Permet d'exécuter des logiciels ou des systèmes conçus pour une architecture différente sur une autre machine.<br><br>
+          <strong>Caractéristiques :</strong><br>
+          Reproduit le matériel (processeur, carte graphique, mémoire, etc.) au niveau bas.<br>
           Assure une compatibilité quasi complète avec le système émulé. </p>
       </article>
 
       <article class="etapes">
-        <img src="assets/img/img-acceuil/simulateur.jpg">
-        <p> Définition : Un simulateur imite le comportement d’un système ou d’un processus dans un environnement contrôlé
-          sans reproduire nécessairement le matériel sous-jacent.
-          Objectif : Étudier et tester des comportements, des modèles ou des algorithmes dans des conditions proches de la réalité.
-          Caractéristiques :
-          Ne reproduit pas fidèlement le matériel.
-          Se concentre sur la modélisation des comportements et des interactions.
+        <img src="assets/img/img-acceuil/simulateur2.jpg">
+        <p> <strong>SIMULATEUR</strong><br><br>
+          <strong>Définition :</strong><br> Un simulateur imite le comportement d’un système ou d’un processus dans un environnement contrôlé
+          sans <br> reproduire nécessairement le matériel sous-jacent.
+          <br><br>
+          <strong>Objectif :</strong><br> Étudier et tester des comportements, des modèles ou des algorithmes dans des conditions proches de la réalité.
+          <br><br>
+          <strong>Caractéristiques :</strong><br>
+          Ne reproduit pas fidèlement le matériel.<br>
+          Se concentre sur la modélisation des comportements et des interactions.<br>
           Moins précis qu'un émulateur pour reproduire le matériel réel.</p>
       </article>
 
       <article class="etapes">
         <img src="assets/img/img-acceuil/outil.jpg">
-        <p> Définition : La virtualisation consiste à créer une version logicielle d’un matériel ou d’un système d’exploitation,
+        <p> <strong>OUTIL DE VIRTUALISATION</strong><br><br>
+          <strong>Définition :</strong><br> La virtualisation consiste à créer une version logicielle d’un matériel ou d’un système d’exploitation,<br>
           appelée machine virtuelle, fonctionnant dans un environnement isolé.
-          Objectif : Exécuter plusieurs systèmes d’exploitation ou environnements indépendants sur un même matériel physique.
-          Caractéristiques :
-          Crée une machine virtuelle qui fonctionne comme un véritable ordinateur.
-          Utilise un hyperviseur pour gérer les ressources matérielles (CPU, RAM, etc.) entre plusieurs machines virtuelles.
+          <br><br>
+          <strong>Objectif :</strong><br> Exécuter plusieurs systèmes d’exploitation ou environnements indépendants sur un même matériel physique.
+          <br><br>
+          <strong>Caractéristiques :</strong><br>
+          Crée une machine virtuelle qui fonctionne comme un véritable ordinateur.<br>
+          Utilise un hyperviseur pour gérer les ressources matérielles (CPU, RAM, etc.) entre plusieurs machines virtuelles.<br>
           Plus performant et précis que l’émulation, car il repose sur les ressources matérielles réelles.
         </p>
       </article>
 
       <div class="diff">
-        <h3> Résumé des différences : </h3>
+        <h3> <b> Résumé des différences : </b></h3>
         <table>
           <tr>
             <th>Critère</th>
@@ -164,7 +172,7 @@
       </div>
 
 
-      <h2 > Type de virtualisation pour les environnements </h2>
+      <h2 > <b> Type de virtualisation pour les environnements </b> </h2>
       <div class="diff">
         <table>
           <tr>
@@ -192,17 +200,20 @@
             <td>Applications critiques, haute disponibilité</td>
           </tr>
         </table>
+      </div>
         <div class="diff">
           <table>
             <tr>
-              <td>VirtualBox et VMware Workstation sont parfaits pour des environnements non critiques, souvent utilisés pour le développement et les tests.</td>
+              <td><strong>VirtualBox</strong> et <strong>VMware Workstation</strong> sont parfaits pour des environnements non critiques,
+                souvent utilisés pour le développement et les tests.</td>
             </tr>
             <tr>
-              <td>Stratus est conçu pour des environnements critiques où la fiabilité, la haute disponibilité, et la tolérance aux pannes sont indispensables,
+              <td><strong>Stratus</strong> est conçu pour des environnements critiques où la fiabilité, la haute disponibilité, et
+                la tolérance aux pannes sont indispensables,
                 avec une virtualisation directe sur le matériel.</td>
             </tr>
           </table>
-      </div>
+        </div>
 
     </section>
   </main>
