--- a/installation.html
+++ b/installation.html
@@ -45,14 +45,13 @@
             </h2>
             <br><br>
             <p>
-                Une machine virtuelle est un environnement informatique isolé qui simule les ressources
-                d’un ordinateur physique, permettant l’exécution d’un système d’exploitation et d’applications.
-                Elle est composée de fichiers de spécification et de configuration et est soutenue par les ressources physiques d’un hôte.
+                Le but de cette SAÉ (situation d’apprentissage et d’évaluation) est dans un premier temps de s’initier à la
+                technique de virtualisation en installant un environnement de virtualisation et en créant une machine virtuelle.
+                Dans un second temps, il s’agit d’installer un serveur web et de l’utiliser pour mettre en ligne le rapport de la SAE.
             </p>
             <br>
             <p>
-                Un tutoriel est proposé sur comment installer une machine virtuelle avec le logiciel <b>Oracle VirtualBox</b>
-                et l'installation d'un OS notamment avec Mint
+                Notre diagramme de Gantt :
             </p>
             <br>
             <img src="assets/img/img-installation/diagramme.png">
