--- a/installationVM.html
+++ b/installationVM.html
@@ -34,72 +34,70 @@
         <section class="image">
             <h2 > Choix de la VMWare : Virtual Box </h2>
             <article class="oracle">
-                <p> Fournir des espaces de travail sécurisés et cryptés. VirtualBox sécurise les connexions à distance aux applications
-                    restreintes grâce à des clés de chiffrement de 256 bits, et garantit que les utilisateurs ne peuvent pas télécharger
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> <b>VirtualBox</b> est un logiciel de virtualisation open source qui permet de créer et d'exécuter plusieurs
+                    systèmes d'exploitation sur un seul ordinateur physique. <br>
+                    Il fonctionne sur des systèmes d'exploitation
+                    hôtes comme Windows, macOS et Linux, en utilisant un hyperviseur de type 2. <br>
+                    VirtualBox offre
+                    des fonctionnalités comme la gestion des machines virtuelles, la prise de snapshots, et la configuration
+                    de ressources comme la mémoire et le stockage pour chaque machine virtuelle. <br><br>
+                    Il sert à tester des choses sur son pc quand on n'est pas sûr du résultat obtenu <i>(exemple : tester des virus)</i>.
+
+                </p>
                 <img src="assets/img/img-installationVM/virtualbox-oracle.jpg">
             </article>
 
             <h2> Etape de l'installation</h2>
             <article class="etapes">
                 <img src="assets/img/img-installationVM/souswindows.png">
-                <p> Fournir des espaces de travail sécurisés et cryptés. VirtualBox sécurise les connexions à distance aux applications
-                    restreintes grâce à des clés de chiffrement de 256 bits, et garantit que les utilisateurs ne peuvent pas télécharger
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Aller sur le site officiel de VirtualBox : <i>https://www.virtualbox.org/</i> <br><br>
+                Sélectionner la platforme sur laquelle on travaille. Pour nous, cela sera Windows.</p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-installationVM/oracle1.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Commencement du choix des paramètres de l'installation. </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-installationVM/oracle2.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Acceptation des termes du contract de la licence. </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-installationVM/oracle3.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Choix de la localisation du fichier.</p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-installationVM/oracle4.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Avertissment d'un éventuel problème de réseau.<br>
+                    (Nous n'en avons pas eu ) </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-installationVM/oracle5.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Demande d'installation de Python Core et de win32api.</p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-installationVM/oracle6.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Choix des installations personalisées. </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-installationVM/oracle7.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Confirmation de l'installation.</p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-installationVM/oracle8.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Affichage du statut de l'installation. </p>
             </article>
 
             <article class="etapes">
                 <img src="assets/img/img-installationVM/oracle9.png">
-                <p> Fournir des espa
-                    ou stocker des données sur des terminaux distants. </p>
+                <p> Affichage de la confirmation de la fin de l'installation. </p>
             </article>
 
 
